# bareops

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  justfile
.forgejo/workflows/: build_cli.yaml  build_plugins.yaml  clippy.yaml  tests.yaml
.github/workflows/: plugins.yml  rust-clippy.yml  rust.yml
adrs/: 202412141440_WASM_as_plugin_mechanism.md  202412141444_WASM_callbacks_for_restricted_actions.md  202412141453_Remote_actions_via_SSH.md  202412141459_DSL_to_define_tasks.md  202412141533_DSL_specification.md  202502022126_bareops_file_extension.md
bareops-conn/: Cargo.toml  build.rs
bareops-conn/schema/: bareops.capnp
bareops-conn/src/: lib.rs  rpc.rs  ssh.rs
bareops-error/: Cargo.toml
bareops-execute/: Cargo.toml
bareops-execute/src/: lib.rs
bareops-integration-test/: Cargo.toml  Dockerfile
bareops-integration-test/src/: lib.rs
bareops-integration-test/tests/: create_file.rs
bareops-integration-test/tests/common/: mod.rs
bareops-inventory/: Cargo.toml
bareops-lang/: Cargo.toml  dsl.pest
bareops-lang/src/: ast.rs  lib.rs  parser.rs
bareops-main/: Cargo.toml
bareops-main/src/: cli.rs  error.rs  lib.rs  main.rs  wasm_runtime.rs
bareops-plugin-api/: Cargo.toml  README.md
bareops-plugin-api/src/: lib.rs
bareops-plugin-api/wit/: world.wit
docs/: dsl_specification.md
examples/: hello-world.bl  justfile
examples/azure-plugin/: Cargo.toml  justfile
examples/azure-plugin/src/: lib.rs
examples/hello-world-plugin/: Cargo.toml  justfile
examples/hello-world-plugin/src/: lib.rs
