[workspace]
members = [
    "bareops-main",
    "bareops-lang",
    "bareops-plugin-api",
    "examples/hello-world-plugin",
    "examples/azure-plugin",
    "bareops-conn",
    "bareops-integration-test",
    "bareops-execute",
    "bareops-error",
    "bareops-inventory",
]
resolver = "2"


[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
