[package]
name = "bareops"
version = "0.1.0"
edition = "2021"

[dependencies]
bareops-lang = { path = "../bareops-lang" }
miette = { version = "7.5", features = ["fancy"] }
wasmtime = "30.0"
wasmtime-wasi = "29.0"
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0"
clap = "4.5"
log = "0.4"
env_logger = "0.11"
tempfile = "3.17"