[package]
name = "bareops"
version = "0.1.0"
edition = "2021"

[dependencies]
bareops-lang = { path = "../bareops-lang" }
miette = { version = "7.6", features = ["fancy"] }
wasmtime = "32.0"
wasmtime-wasi = "32.0"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0"
clap = "4.5"
log = "0.4"
env_logger = "0.11"
tempfile = "3.19"
